Some fixes so that register and login work from front-end
